--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,10 +10,13 @@
         android:id="@+id/imageView"
         android:layout_width="423dp"
         android:layout_height="152dp"
+        android:layout_marginBottom="20dp"
         android:scaleType="fitXY"
-        app:srcCompat="@drawable/money"
-        tools:layout_editor_absoluteX="-6dp"
-        tools:layout_editor_absoluteY="-1dp" />
+        app:layout_constraintBottom_toTopOf="@+id/textView"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/money" />
 
     <TextView
         android:id="@+id/textView"
